# MonoGeoLoc

./: CMakeLists.txt  camera_config_test.cpp  main.cpp  serial_test.cpp  tcpclient.py
include/: arg_parser.hpp  command.hpp  serial.hpp  tcp_server.hpp
